tests/error/connect_except.gw
#! [contains] NullPtrException
ref UGen u;
adc => u;
